--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -2,7 +2,7 @@ db.driverLocation=./src/tools/mysql-connector-java-8.0.18.jar
 db.driverClassName=com.mysql.cj.jdbc.Driver
 
 #db.url=jdbc:mysql://192.1.1.1:3306/mmall?characterEncoding=utf-8
-db.url=jdbc:mysql://localhost:3306/blog?useSSL=false&useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT
+db.url=jdbc:mysql://localhost:3306/mmall?useSSL=false&useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT
 db.username=root
 db.password=sy2527552
 
