--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,7 +1,7 @@
-
-ftp.server.ip=你的FTP服务器ip地址
-ftp.user=mmallftp
-ftp.pass=ftppassword
+ftp.server.ip=192.168.174.131
+ftp.server.port=21
+ftp.user=ftpuser
+ftp.pwd=sy2527552
 ftp.server.http.prefix=http://img.happymmall.com/
 
 
