--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.nar
 *.ear
@@ -33,5 +33,5 @@ target/
 hs_err_pid*
 
 
-src/main/webapp/WEB-INF/lib/
+#src/main/webapp/WEB-INF/lib/
 src/test/
